添加了密钥文件存在性即时检查；退回主页面再次进入子页面时将重载配置文件；更改为正确的名称。

--- a/ScpLauncher.csproj
+++ b/ScpLauncher.csproj
@@ -5,7 +5,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <OutputType>WinExe</OutputType>
     <RootNamespace>ScpLauncher</RootNamespace>
-    <AssemblyName>ScpLauncher</AssemblyName>
+  <AssemblyName>SCP--</AssemblyName>
     <Nullable>disable</Nullable>
     <ImplicitUsings>disable</ImplicitUsings>
   </PropertyGroup>
